src/components/navigation/components/sideBar/components/citiesSelector.css
.selectors {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 20px;
  width: 100%;
}

.button {
  width: 158px;
  height: 38px;
}

.selectContainer {
  display: block;
  margin-bottom: 10px;
  width: 100%;
}

.select-search-container {
  width: 100%;
  --select-search-background: #2a2b40;
  --select-search-border: #2a2b40;
  --select-search-selected: #89b4fa;
  --select-search-text: #fff;
  --select-search-subtle-text: #a6adc8;
  --select-search-highlight: #1e1e2e;
}

.select-search-input:hover,
.select-search-has-focus .select-search-select {
  border-color: #2a2b40 !important;
}

.select-search-options {
  padding-left: 5px;
}

.timeInfo {
  display: flex;
  flex-direction: column;
  gap: 10px;
  margin-top: 20px;
  width: 158px;
  align-items: center;
  justify-content: center;
  text-align: center;
  right: 0;
  color: white;
}

.timeInfo span {
  font-size: 20px;
  display: flex;
  flex-wrap: wrap;
}

.time,
.time span {
  font-size: 25px;
}

.time {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 150px;
  height: 150px;
  gap: 10px;
  border-radius: 50%;
  color: white;
}

.row {
  display: flex;
  flex-direction: column;
  gap: 30px;
  align-items: center;
}

.label {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 5px;
  width: 100%;
  justify-content: center;
}

.label span {
  color: #2a2b40;
  font-weight: 500;
}

.inputNumber {
  max-width: 158px;
}

.ant-slider-track {
  background-color: #2a2b40 !important;
}

.ant-slider-track:hover {
  background-color: gray !important;
}

.ant-slider-handle::after {
  box-shadow: 0 0 0 4px #2a2b40 !important;
}
.cityInfo {
  padding: 0px 15px;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.cityInfo span {
  font-weight: 600;
  font-size: large;
  color: #2a2b40;
}
@media (max-width: 599px) {
  .cityInfo span {
    font-size: 14px;
  }
}

.city-list {
  list-style-type: none;
  background-color: transparent;
  padding: 10px;
  font-size: medium;
  border-radius: 5px;
}

.city-list:has(li) {
  background-color: #2a2b40;
}

.cityInfo {
  color: white;
}

